# schemafy

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: build.yml
docs/adrs/: 0001-string-enum-support.md
npm/schemafy/: package.json
npm/schemafy-darwin-arm64/: package.json
npm/schemafy-darwin-x64/: package.json
npm/schemafy-linux-arm64-gnu/: package.json
npm/schemafy-linux-arm64-musl/: package.json
npm/schemafy-linux-x64-gnu/: package.json
npm/schemafy-linux-x64-musl/: package.json
npm/schemafy-win32-arm64-msvc/: package.json
npm/schemafy-win32-x64-msvc/: package.json
npm/schemafy/lib/: targets.js
npm/schemafy/scripts/: postinstall.js
npm/schemafy/test/: prepare-npm-packages.test.js  publish-npm-packages.test.js  targets.test.js
scripts/: prepare-npm-packages.js  publish-npm-packages.js  refuse-root-publish.js
src/: lib.rs  main.rs
tests/: cli.rs
