[package]
name = "schemafy"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
